# compiler-course-2025

./: README.md  api.txt  files.txt  out.ll  test
clang/compiler-course/: CMakeLists.txt  ClangASTTool.cpp  ImplicitCastPlugin.cpp  source.cpp
clang/compiler-course/IvashchukVA/: CMakeLists.txt  IvashchukVA_lab1.cpp  IvashchukVA_lab2.cpp  lab2.test.ll
clang/compiler-course/Ivashchuk_V_A_lab1/: CMakeLists.txt  lab1.test.cpp
clang/compiler-course/Kholin_K_prefixes/: CMakeLists.txt  Kholin_K_prefixes_plugin.cpp
clang/compiler-course/Shpynov_N_ClangAST_var2/: CMakeLists.txt  Shpynov_N_ClangAST.cpp
clang/compiler-course/Shurigin_S_FI1_ClangAst_var4/: CMakeLists.txt  ShuriginAST.cpp
clang/compiler-course/Veliev_E_DataType/: CMakeLists.txt  DataType.cpp
clang/compiler-course/agafeev_a_ast/: CMakeLists.txt  agafeev_ast_lab_v1.cpp
clang/compiler-course/anikin_m_ast/: anikin_m_ast.cpp
clang/compiler-course/baranov_a/: CMakeLists.txt  baranov_ast.cpp
clang/compiler-course/beresnev_a_clang/: example.cpp
clang/compiler-course/beskhmelnova_k_implicit_conversions/: CMakeLists.txt  beskhmelnova_k_implicit_conversions.cpp
clang/compiler-course/bessonov_e_first_lab/: CMakeLists.txt  bessonov_e_first_lab.cpp
clang/compiler-course/budazhapova_e_unused_var_par/: budazhapova_lab1.cpp
clang/compiler-course/chastov_v_lab1/: CMakeLists.txt  chastov_v_lab1.cpp
clang/compiler-course/chistov_a_user_data_type/: chistov_a_user_data_type_plugin.cpp
clang/compiler-course/chizhov_m_implicit_conversions/: CMakeLists.txt  chizhov_m_implicit_conversions.cpp
clang/compiler-course/clang-plugin/: CMakeLists.txt
clang/compiler-course/clang-plugin-Mamaeva/: CMakeLists.txt  myClangPlugin.cpp
clang/compiler-course/drozhdinov_d_clangast_var3/: drozhdinov_clang.cpp
clang/compiler-course/dudchenko_o_ast_var_1/: CMakeLists.txt  dudchenko_o_ast_var_1.cpp
clang/compiler-course/egor_dormidontov_lab1/: lab1_ast_egor.cpp
clang/compiler-course/frolova_e_implicit_conversions/: CMakeLists.txt  frolova_e_implicit_conversions.cpp
clang/compiler-course/grudzin_k_unused_vars_ast/: CMakeLists.txt  grudzin_k_unused_vars.cpp
clang/compiler-course/guseynov_e_lab1_var_3/: CMakeLists.txt  guseynov_e_implicit_cast.cpp
clang/compiler-course/ionova_ekaterina_lab_1/: CMakeLists.txt  ClassInfoPlugin.cpp
clang/compiler-course/ivanov_m_prefix_4/: ivanov_m_prefix.cpp
clang/compiler-course/kabalova_clangAST/: kabalova_ClangAST.cpp
clang/compiler-course/khokhlov_a_l1_v4/: khokhlov_a_l1_v4.cpp
clang/compiler-course/khovansky_d_lab1/: CMakeLists.txt  khovansky_d_lab1.cpp
clang/compiler-course/kolodkin_g_lab_1_var_1/: kolodkin_g_lab1_plugin.cpp
clang/compiler-course/komshina_d_num_implicit_conversions/: komshina_d_num_implicit_conversions.cpp
clang/compiler-course/korobeinikov_prefix_var/: CMakeLists.txt  korobeinikov_prefix_var_plugin.cpp
clang/compiler-course/koshkin_n_ast/: CMakeLists.txt  koshkin_n_ast.cpp
clang/compiler-course/kozlova_e_variant_4/: CMakeLists.txt  kozlova_e_var_4.cpp
clang/compiler-course/kudryashova_i_compilers_clangast/: kudryashova_i_clangast_plugin.cpp
clang/compiler-course/kurakin_user_data_type/: CMakeLists.txt  kurakin_user_data_type_plugin.cpp
clang/compiler-course/lavrentyev_AST_Plugin/: CMakeLists.txt  funcPrefixPlugin.cpp
clang/compiler-course/lopatin_i_user_data_type/: CMakeLists.txt  lopatin_i_user_data_type_plugin.cpp
clang/compiler-course/lysov_ivan_1stLabs/: CMakeLists.txt  lysov_ivan_1stLabs.cpp
clang/compiler-course/markin_i_conversions/: markin_i_conversions.cpp
clang/compiler-course/mezhuev_m_lab1/: CMakeLists.txt  mezhuev_m_lab1.cpp
clang/compiler-course/mironov_a_lab1/: CMakeLists.txt  source.cpp
clang/compiler-course/my_plugin/: my_plugin.cpp
clang/compiler-course/opolin_d_lab_1_var_1/: CMakeLists.txt  opolin_d_lab_1_plugin.cpp
clang/compiler-course/plekhanov_unused_variables/: plekhanov.cpp
clang/compiler-course/polyakov_a_lab1/: CMakeLists.txt  polyakov_a_lab1.cpp
clang/compiler-course/rezantseva_a_prefixes/: CMakeLists.txt  rezantseva_a_prefixes.cpp
clang/compiler-course/savchenko_m_l1_v2/: savchenko_m_l1_v2.cpp
clang/compiler-course/sedova_o_lab1/: CMakeLists.txt  example.cpp
clang/compiler-course/shishkarev_a_implicit_conversions/: CMakeLists.txt  shishkarev_a_implicit_conversions.cpp
clang/compiler-course/shkurinskaya_e_var_renaming/: shkurinskaya_e_var_renaming.cpp
clang/compiler-course/shulpin_i_implicit_conversion/: CMakeLists.txt  shulpin_i_ClangAST_lab.cpp
clang/compiler-course/solovev_a/: CMakeLists.txt  solovev_a.cpp
clang/compiler-course/solovyev_d_unused_variable/: CMakeLists.txt  solovyev_d_unused_variable_plugin.cpp
clang/compiler-course/somov_i_data_type/: CMakeLists.txt  somov_i_data_type_plugin.cpp
clang/compiler-course/sozonov_i_user_defined_data_type/: sozonov_i_user_defined_data_type_plugin.cpp
clang/compiler-course/sozonov_i_user_defined_data_type_plugin/: source.cpp
clang/compiler-course/stroganov_m_lab1/: CMakeLists.txt  stroganov_m_lab1.cpp
clang/compiler-course/suvorov_d_lab1_var4/: CMakeLists.txt  suvorov_d_adding_prefs.cpp
clang/compiler-course/vasenkov_a_VarPrefix/: CMakeLists.txt  vasenkov_a_VarPrefix.cpp
clang/compiler-course/yasakova_t_lab1/: CMakeLists.txt  yasakova_t_user_data_type_plugin.cpp
llvm/compiler-course/backend/: CMakeLists.txt  RemoveRedundantCopy.cpp  kolodkin_g_lab_1_var_1_pass.cpp
llvm/compiler-course/llvm-ir/: CMakeLists.txt  Mul2ToAdd.cpp
mlir/compiler-course/: CMakeLists.txt  FoldAddZero.cpp  rem_pass.cpp
mlir/compiler-course/IvashchukVA/: CMakeLists.txt  IvashchukVA_lab4.cpp
mlir/compiler-course/Mamaeva_Olga_Lab4/: Mamaeva_Olga_MLIR_Ceil_Opt.cpp
mlir/compiler-course/Shpynov_N_MLIR/: CMakeLists.txt  Shpynov_N_MLIR_var2.cpp
mlir/compiler-course/agafeev_s_var1/: agafeev_s_pass.cpp
mlir/compiler-course/anikin_m_mlir_loop/: mlirtraceloop.cpp
mlir/compiler-course/baranov_a/: pass.cpp
mlir/compiler-course/beresnev_a/: CMakeLists.txt  ExamplePass.cpp
mlir/compiler-course/beskhmelnova_k_lower_rem_ops/: CMakeLists.txt  (+1 more)
(+512 files in other folders)
